[launcher] test VersionCheck.java fails with new version string

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9-repo-verona
    • Affects Version/s: 9-repo-verona
    • Component/s: tools
    • team
    • generic
    • generic

        The test queries the launcher internals to determine the dotversion which is
        "dotversion: Maj.Min"

        Therefore, the launcher outputs dotversion: 9.0 but the test gets "dotversion: 9.internal+0",
        either the test needs to be fixed or the launcher code needs to be fixed to account
        for the minor number.

              Assignee:
              Kumar Srinivasan
              Reporter:
              Kumar Srinivasan
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: