8129601: [launcher] test VersionCheck.java fails with new version string

Reviewed-by: alanb